[workspace]
members = [
    # Data processing (existing)
    "data/hft-live", "exchange-connection-hub",
    
    # Add other members as they become available
    # "core/hft-event-bus", 
    # "charting/hft-charting-core",
    # "dashboard/hft-dashboard-core",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Concurrency and memory management
dashmap = "6.0"
parking_lot = "0.12"
crossbeam = "0.8"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio-stream = "0.1"

# UI Framework (egui)
egui = "0.29"
egui_plot = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }

# Math and statistics
approx = "0.5"
rand = "0.8"

# Internal crates (relative paths)
# Add as they become available
# hft-event-bus = { path = "../core/hft-event-bus" }
# market-data-engine = { path = "../data/market-data-engine" }
# market-data-aggregator = { path = "../data/market-data-aggregator" }
exchange-connection-hub = { path = "../rust-crates/exchange-connection-hub" }

# Additional workspace dependencies for exchange-connection-hub
bytes = "1.5"
byteorder = "1.5"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
